# neil_playwright

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
neil_playwright/: __init__.py  antibot_utils.py  gpt_playwright.py  gpt_utils.py  playwright_utils.py
neil_playwright/stealth_js/: audio_context.js  battery.js  bluetooth.js  connection_effective_type.js  device_memory.js  hardware_concurrency.js  linkedin_fingerprint.js  media_devices_enumerate.js  media_devices_getusermedia.js  platform.js  speech_synthesis_speak.js  speech_synthesis_voices.js  user_agent_data.js  webgl.js  webgpu.js
