[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neil_playwright"
version = "0.1.0"
description = "Toolkit for GPT-assisted scraping and anti-bot detection using Playwright"
authors = [{ name = "Neil Tapiavala" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "playwright>=1.41.0",
    "patchright>=0.0.7",
    "python-ghost-cursor>=0.1.1",
    "cssselect==1.2.0",
    "html-similarity>=0.1.3",
    "tiktoken>=0.5.1",
    "beautifulsoup4",
    "requests",
    "tldextract",
    "pymongo",
    "openai>=1.3.5",
    "google-cloud-storage",
    "url-normalize",
    "neil-logger @ git+https://github.com/nyc-design/neil_logger.git",
    "neil_data_utils @ git+https://github.com/nyc-design/neil_data_utils.git"
]

[tool.setuptools.package-data]
"neil_playwright.stealth_js" = ["*.js"]
